Update README and flows for Kestra module with detailed instructions and configurations

--- a/Module-2-Kestra/docker-compose.yaml
+++ b/Module-2-Kestra/docker-compose.yaml
@@ -73,6 +73,11 @@ services:
               basePath: "/app/storage"
           queue:
             type: postgres
+          ai:
+            type: "gemini"
+            gemini:
+              api-key: ${GEMINI_API_KEY}
+              model-name: gemini-2.5-flash
           tasks:
             tmpDir:
               path: /tmp/kestra-wd/tmp
