Add initial setup for Module 4: Analytics Engineering with dbt
- Create .gitignore files to exclude data and build artifacts
- Add README.md with module overview, setup instructions, and homework solutions
- Implement main.py for module entry point
- Set up pyproject.toml for project dependencies
- Create dbt project structure with models, analyses, and macros
- Implement data ingestion script to download and convert NYC taxi data
- Add staging models for green and yellow taxi trip data
- Create intermediate model to union trip data
- Define sources and schema for dbt models
- Add example dbt models and tests for demonstration

--- a/Module-4-analytics-engineering/pyproject.toml
+++ b/Module-4-analytics-engineering/pyproject.toml
@@ -1,10 +1,10 @@
 [project]
-name = "module-3-data-warehouse"
+name = "module-4-analytics-engineering"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12.8"
 dependencies = [
-    "dlt[bigquery,duckdb,gs]>=1.21.0",
-    "google-cloud-storage>=3.9.0",
+    "dbt-duckdb>=1.10.0",
+    "duckdb>=1.4.4",
 ]
