feat: Enhance FHV data integration and update models for improved analytics

--- a/Module-4-analytics-engineering/taxi_rides_ny/models/staging/sources.yml
+++ b/Module-4-analytics-engineering/taxi_rides_ny/models/staging/sources.yml
@@ -98,3 +98,7 @@ sources:
             description: Improvement surcharge
           - name: total_amount
             description: Total amount charged
+
+      - name: fhv_tripdata
+        description: Raw for-hire vehicle (FHV) trip records
+        loaded_at_field: pickup_datetime
