feat: Add GitHub data ingestion pipeline with dlt
- Created a new Python script (1.py) for a simple data ingestion pipeline using dlt.
- Added a Jupyter notebook (dlt_Pipeline_Overview.ipynb) to provide an overview of building a data pipeline with dlt.
- Introduced a YAML configuration file (github-docs.yaml) for GitHub API source metadata.
- Added a markdown guide (github.md) for setting up a GitHub data pipeline.
- Implemented the main pipeline logic in github_pipeline.py to fetch data from GitHub API.
- Created a requirements.txt file to specify dependencies for the project.

--- a/Module-5-data-platforms/zoomcamp/pipeline/assets/ingestion/requirements.txt
+++ b/Module-5-data-platforms/zoomcamp/pipeline/assets/ingestion/requirements.txt
@@ -3,7 +3,7 @@
 # - Pin versions for reproducibility.
 # Docs: https://getbruin.com/docs/bruin/assets/python
 #
-# Example:
-# pandas==2.2.0
-# requests==2.31.0
+pandas==2.2.0
+pyarrow==15.0.0
+fastparquet==2024.2.0
 
