Add initial DLT pipeline for NYC taxi data ingestion
- Created `taxi_pipeline.py` to define a DLT pipeline that ingests NYC taxi data from the DLT Hub analytics REST API.
- Implemented REST API source configuration with pagination using page number strategy.
- Added instructions for using DLT and REST API parameter extraction.
- Included guidelines for configuring pagination strategies in REST API sources.
- Established a `.gitignore` file to exclude unnecessary files and directories.
- Specified dependencies in `requirements.txt` for DLT with DuckDB support.
- Created template for building DLT pipelines from REST APIs in `taxi_pipeline_pipeline.py`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dlt[duckdb,workspace]>=1.21.0",
     "pandas>=3.0.0",
 ]
 
