Add Spark integration and data processing scripts
- Created a Jupyter notebook (09_spark_gcs.ipynb) for configuring Spark with Google Cloud Storage.
- Added cloud.md documentation for running Spark in the cloud and connecting to Google Cloud Storage.
- Implemented a download script (download_data.sh) for fetching NYC taxi data from GitHub.
- Introduced a new Jupyter notebook (homework.ipynb) for data analysis and processing tasks.
- Added a main Python script (main.py) with a simple greeting function.
- Created a pyproject.toml file for project dependencies and metadata.
- Added a test script (test_spark.py) to verify Spark installation and functionality.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,5 @@ members = [
     "Module-3-data-warehouse",
     "Module-4-analytics-engineering",
     "Module-5-data-platforms",
+    "Module-6-batch",
 ]
